--- a/appveyor.yml
+++ b/appveyor.yml
@@ -108,7 +108,7 @@ test_script:
 #   - stack hpc report cardano-sl cardano-sl-txp cardano-sl-core cardano-sl-db cardano-sl-update cardano-sl-infra cardano-sl-lrc cardano-sl-ssc
 # Retry transient failures due to https://github.com/haskell/cabal/issues/4005
   # We intentionally don't build auxx here, because this build is for installer.
-  - scripts\ci\appveyor-retry call stack --dump-logs install cardano-sl cardano-sl-tools cardano-sl-wallet cardano-sl-wallet-new
+  - scripts\ci\appveyor-retry call stack --dump-logs install  cardano-sl-tools 
       -j 3
       --no-terminal
       --local-bin-path %WORK_DIR%
@@ -129,7 +129,6 @@ test_script:
   - copy lib\configuration.yaml daedalus\
   - copy lib\*genesis*.json daedalus\
   - copy cardano-launcher.exe daedalus\
-  - copy cardano-node.exe daedalus\
   - copy cardano-x509-certificates.exe daedalus\
   - cd daedalus
   - Echo %APPVEYOR_BUILD_VERSION% > build-id
